fix overflow cutting task on dragging

--- a/src/css/task.css
+++ b/src/css/task.css
@@ -10,6 +10,10 @@
     overflow-y: scroll;
 }
 
+.tasks-container.dragging-task {
+    overflow-y: visible;
+}
+
 .task-frame {
     display: flex;
     width: 100%;
